Refactor integration tests: Replace `GreeterServiceTest` with new gRPC lifecycle, edge cases, and client factory tests.